--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-selenium==4.1.0
-chromedriver-binary==94.0.4606.61
-textblob==0.15.3
-pandas==1.3.5
+instaloader==4.9.6
+pillow==9.0.1
 tkinter
-requests==2.27.1
+
